my fast project

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--Header Start-->
     <header>
         <div class="logo">
-            <a href=""><img src="img/logo.png.webp" alt=""></a>
+            <a href=""><img src="logo.png.webp" alt=""></a>
         </div>
         <div class="nav">
 
@@ -46,7 +46,7 @@
             </div>
         
             <div class="img">
-                <img src="img/man.webp" alt="">
+                <img src="man.webp" alt="">
             </div>        
     </Section>
    <!--Section 1 End-->
@@ -55,7 +55,7 @@
 
 <section class="Section2">
 <div class="aboutimg">
-    <img src="img/about-img.png.webp" alt="">
+    <img src="about-img.png.webp" alt="">
 </div>
 <div class="abouttext">
     <h3>About Me</h3>
@@ -157,7 +157,7 @@
 
    <div>
     <figure>
-        <img src="img/p1.jpg.webp" alt="">
+        <img src="p1.jpg.webp" alt="">
     </figure>
         <h1>2D Vinyl Design</h1>
         <p>vector</p>
@@ -166,7 +166,7 @@
 
    <div>
     <figure>
-        <img src="img/p2.jpg.webp" alt="">
+        <img src="p2.jpg.webp" alt="">
     </figure>
         <h1>2D Vinyl Design</h1>
         <p>vector</p>
@@ -175,7 +175,7 @@
 
    <div>
     <figure>
-        <img src="img/p3.jpg.webp" alt="">
+        <img src="p3.jpg.webp" alt="">
     </figure>
         <h1>Creative Poster Design</h1>
         <p>Agency</p>
@@ -183,7 +183,7 @@
 
    <div>
     <figure>
-        <img src="img/p4.jpg.webp" alt="">
+        <img src="p4.jpg.webp" alt="">
     </figure>
         <h1>Embosed Logo Design</h1>
         <p>Portal</p>
@@ -191,7 +191,7 @@
 
    <div>
     <figure>
-        <img src="img/p5.jpg.webp" alt="">
+        <img src="p5.jpg.webp" alt="">
     </figure>
         <h1>3D Helmet Design</h1>
         <p>vector</p>
@@ -199,7 +199,7 @@
 
    <div>
     <figure>
-        <img src="img/p6.jpg.webp" alt="">
+        <img src="p6.jpg.webp" alt="">
     </figure>
         <h1>2D Vinyl Design</h1>
         <p>raster</p>
